Finish first sprint

--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -1,4 +1,6 @@
 <%= link_to "New deck", new_deck_path %>
+<%#= link_to "Sign out", session_path, method: :delete %>
+
 <% @decks.each do |deck| %>
   <div>
     <%= link_to deck.name, deck %>
